--- a/MarkDown/目次.md
+++ b/MarkDown/目次.md
@@ -104,7 +104,7 @@
 **対象読者**：初心者から上級者まで全レベル  
 **想定ページ数**：300ページ以上  
 **コード例言語**：C#、Java、Python、JavaScript等  
-**著者**：小島富治雄氏の思想と実践に基づく総合的な解説  
+**著者**：小島 富治雄
 
 ---
 
