--- a/MarkDown/第1章_美しいソースコードの基本原則.md
+++ b/MarkDown/第1章_美しいソースコードの基本原則.md
@@ -4,11 +4,13 @@
 
 ### 1.1.1　美しいソースコードの定義
 
-美しいソースコードとは、単に動作するだけではない。それは**拡張と保守がしやすいコード**である。小島富治雄氏は長年の経験から、美しいソースコードの本質を次のように定義している。
+美しいソースコードとは、単に動作するだけではない。それは**拡張と保守がしやすいコード**である。ここでは、美しいソースコードの本質を次のように定義しよう。
 
 > 「美しいソースコードとは、拡張と保守がしやすいコードである」
 
 この定義は、ソフトウェア開発の現実を反映している。なぜなら、プログラミングとは単に一度動くものを作ることではなく、「拡張し保守する作業」だからである。
+
+プログラミングは、最初の1行を書いてから、「拡張し保守しつづける作業」なのである。
 
 ### 1.1.2　美しいコードがもたらす品質
 
@@ -43,7 +45,7 @@
 
 ## 1.2　美しいソースコードのための七箇条
 
-小島富治雄氏が提唱する「美しいソースコードのための七箇条」は、美しいコードを書くための実践的な指針である。これらの原則は相互に関連し合い、統合的に適用することで最大の効果を発揮する。
+「美しいソースコードのための七箇条」は、美しいコードを書くための実践的な指針である。これらの原則は相互に関連し合い、統合的に適用することで最大の効果を発揮する。
 
 ### 1.2.1　第一箇条：意図を表現
 
@@ -80,14 +82,14 @@ C# 3.0以降の機能により、意図の表現がより自然になった：
 ```csharp
 // 従来の書き方（Howが混入）
 List<Employee> result = new List<Employee>();
-foreach (Employee emp in employees)
+foreach (Employee employee in employees)
 {
-    if (emp.Department == "Sales")
-        result.Add(emp);
+    if (ememployeep.Department == "Sales")
+        result.Add(employee);
 }
 
 // 宣言的な書き方（Whatが明確）
-var salesEmployees = employees.Where(emp => emp.Department == "Sales");
+var salesEmployees = employees.Where(employee => employee.Department == "Sales");
 ```
 
 #### 実践演習
@@ -99,7 +101,8 @@ var salesEmployees = employees.Where(emp => emp.Department == "Sales");
 string result = "";
 for (int i = 0; i < names.Length; i++)
 {
-    if (i > 0) result += ", ";
+    if (i > 0)
+        result += ", ";
     result += names[i];
 }
 return result;
@@ -248,7 +251,7 @@ public class CustomerOrderValidator
 
 #### サービス指向名前付け（SON）
 
-名前は**クライアント（利用者）の視点**で決定すべきである：
+名前は**クライアント（利用側）の視点**で決定すべきである：
 
 ```csharp
 // 実装者視点の命名（悪い例）
@@ -261,11 +264,11 @@ public class SqlDataReader
 public class CustomerRepository
 {
     public Customer FindById(int customerId) { }
-    public List<Customer> FindByName(string name) { }
+    public List<Customer> FindByName(string customerName) { }
 }
 ```
 
-利用者にとって重要なのは「何ができるか」であり、「どのように実装されているか」ではない。
+利用側にとって重要なのは「何ができるか」であり、「どのように実装されているか」ではない。
 
 #### 命名のアンチパターン
 
@@ -303,15 +306,17 @@ public class OrderService
 - **同じ意図のものが重複して書かれていないこと**
 - **それであるものとそれでないものの区別が付くこと**
 
-#### DRY原則の実践
+#### Once and Only Once (OAOO) 原則の実践
 
-Don't Repeat Yourself（DRY）原則は、「すべての知識はシステム内で単一、明確、権威ある表現を持つべき」という考え方である。
+Once and Only Once (OAOO) 原則は、コードの重複を避ける考え方である。
+
+同じ意図のコードが重複していないことで、シンプルになる。そして、実装・拡張・保守のときの同じ作業の繰り返しを避けることができる。
 
 ```csharp
 // 重複のある悪い例
 public class OrderCalculator
 {
-    public decimal CalculateSubtotal(List<OrderItem> items)
+    public decimal GetSubtotal(List<OrderItem> items)
     {
         decimal subtotal = 0;
         foreach (var item in items)
@@ -321,7 +326,7 @@ public class OrderCalculator
         return subtotal;
     }
     
-    public decimal CalculateTotal(List<OrderItem> items, decimal taxRate)
+    public decimal GetTotal(List<OrderItem> items, decimal taxRate)
     {
         decimal subtotal = 0;
         foreach (var item in items)  // 重複
@@ -337,14 +342,14 @@ public class OrderCalculator
 // 重複を排除した改善例
 public class OrderCalculator
 {
-    public decimal CalculateSubtotal(List<OrderItem> items)
+    public decimal GetSubtotal(List<OrderItem> items)
     {
         return items.Sum(item => item.Price * item.Quantity);
     }
     
-    public decimal CalculateTotal(List<OrderItem> items, decimal taxRate)
+    public decimal GetTotal(List<OrderItem> items, decimal taxRate)
     {
-        var subtotal = CalculateSubtotal(items);
+        var subtotal = GetSubtotal(items);
         return subtotal + (subtotal * taxRate);
     }
 }
