--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -4,13 +4,15 @@
 
 ### 2.1.1　命名とモデリングの関係
 
-小島富治雄氏は「**名前重要。**」という言葉を通して、プログラミングにおける命名の根本的な重要性を訴えている。この思想は、まつもとゆきひろ氏の「プログラミングでは名前の付け方がとても重要」という言葉からも影響を受けている。
+「**名前重要。**」
+
+プログラミングにおいて命名は根本的に重要である。Ruby の作者のまつもとゆきひろ氏 (Matz) も「プログラマが知るべき97のこと」という書籍の中で「名前重要」という言葉を使っている。
 
 命名は単なる識別子の選択ではない。それは**モデリングの中心的な行為**である。プログラミングにおけるモデリングとは、現実世界の複雑さから必要な要素を抽出し、コンピュータで扱える形に抽象化することである。
 
 ### 2.1.2　「ソースコードを書く」という行為はモデリング
 
-小島氏は「ソースコードを書く」という行為を次のように定義している：
+「ソースコードを書く」という行為を次のように定義したい：
 
 > 「ソースコードを書く」という行為は**設計＋実装＋テスト**である
 
