--- a/MarkDown/第3章_モデリングとしてのプログラミング.md
+++ b/MarkDown/第3章_モデリングとしてのプログラミング.md
@@ -4,7 +4,7 @@
 
 ### 3.1.1　従来の認識との違い
 
-従来、プログラミングは「コンピュータに対する指示の記述」と考えられがちであった。しかし、小島富治雄氏が提唱する考え方では、プログラミングは以下の統合的な活動である：
+従来、プログラミングは「コンピュータに対する指示の記述」と考えられがちであった。しかし、プログラミングは以下の統合的な活動である：
 
 > 「ソースコードを書く」という行為は**設計＋実装＋テスト**である
 
