--- a/MarkDown/第4章_マルチパラダイムプログラミング.md
+++ b/MarkDown/第4章_マルチパラダイムプログラミング.md
@@ -4,7 +4,7 @@
 
 ### 4.1.1　プログラミングパラダイムとは
 
-プログラミングパラダイムとは、プログラムを構築するための基本的な考え方や手法の体系である。小島富治雄氏は、現代のソフトウェア開発において**マルチパラダイムプログラミング**の重要性を強調している。
+プログラミングパラダイムとは、プログラムを構築するための基本的な考え方や手法の体系である。現代のソフトウェア開発において**マルチパラダイムプログラミング**は重要である。
 
 > 「マルチパラダイムプログラミングが現実的なものとなりつつある」
 
