Add "第0章 はじめに.md".

--- a/MarkDown/第1章_美しいソースコードの基本原則.md
+++ b/MarkDown/第1章_美しいソースコードの基本原則.md
@@ -17,9 +17,9 @@
 美しいソースコードは、ソフトウェアの非機能的品質に大きな影響を与える。具体的には以下の品質属性を向上させる：
 
 #### 直接的に向上する品質
-- **理解容易性（understandability）**：わかりやすい
-- **変更容易性（modifiability）**：修正・拡張しやすい  
-- **検証性（testability）**：テストしやすい
+- **理解容易性（Understandability）**：わかりやすい
+- **変更容易性（Ease of Change）**：修正・拡張しやすい  
+- **検証性（Testability）**：テストしやすい
 
 #### 間接的に向上する品質
 - **移植性（portability）**：他環境への移植が容易
