Update "第0章 はじめに".

--- a/MarkDown/第0章 はじめに.md
+++ b/MarkDown/第0章 はじめに.md
@@ -8,9 +8,9 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/SjjrPdNgRbc?si=bfx3EcQKtCexXuTX" title="The Art of Naming: How Code Speaks to Humans" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 
-以下、動画のすべての内容を完璧に文字起こししたものです。
+## 動画の文字起こし
 
-**English (英語)**
+### **English (英語)**
 
 **(0:00)** Welcome to The Explainer. Today, we are getting into something that's at the absolute heart of good software development, but it's something we often get wrong: the art of naming things.
 
@@ -56,9 +56,7 @@
 
 **(5:38)** [notebooklm.google.com]
 
----
-
-**Japanese (日本語)**
+### **Japanese (日本語)**
 
 **(0:00)** 「The Explainer」へようこそ。今日は、優れたソフトウェア開発のまさに中心にあるものでありながら、私たちがしばしば間違ってしまうこと、つまり「物事に名前を付ける技術」について掘り下げていきます。
 
@@ -107,6 +105,8 @@
 ## 音声解説
 
 [音声解説「美しいコード: 原則と実践」 by NotebookLM](https://notebooklm.google.com/notebook/f9d9ab45-891e-4c7c-87c5-d397d749cfe8?artifactId=74eb4347-b03d-4977-8add-8954faa4fd6f)
+
+### 文字起こし
 
 こんにちは。今回は小島富治雄さんのソフトウェア開発に関する、えっと、資料群ですね。プレゼンとかメモとか。
 ええ、ええ。いくつもありますね。
